@@ -250,75 +250,6 @@ proc runtest_file_p { runtests testcase } {
 }
 
 
-# Compares two files line-by-line
-#     returns 1 it the files match,
-#     returns 0 if there was a file error,
-#     returns -1 if they didn't match.
-#
-proc diff { file_1 file_2 } {
-    set eof -1
-    set differences 0
-
-    if {[file exists ${file_1}]} {
-	set file_a [open ${file_1} r]
-	fconfigure $file_a -encoding binary
-    } else {
-	warning "${file_1} doesn't exist"
-	return 0
-    }
-
-    if {[file exists ${file_2}]} {
-	set file_b [open ${file_2} r]
-	fconfigure $file_b -encoding binary
-    } else {
-	warning "${file_2} doesn't exist"
-	return 0
-    }
-
-    verbose "# Diff'ing: ${file_1} ${file_2}" 1
-
-    set list_a ""
-    while { [gets ${file_a} line] != ${eof} } {
-	if {[regexp "^#.*$" ${line}]} {
-	    continue
-	} else {
-	    lappend list_a ${line}
-	}
-    }
-    close ${file_a}
-
-    set list_b ""
-    while { [gets ${file_b} line] != ${eof} } {
-	if {[regexp "^#.*$" ${line}]} {
-	    continue
-	} else {
-	    lappend list_b ${line}
-	}
-    }
-    close ${file_b}
-    for { set i 0 } { $i < [llength $list_a] } { incr i } {
-	set line_a [lindex ${list_a} ${i}]
-	set line_b [lindex ${list_b} ${i}]
-
-	if {[string compare ${line_a} ${line_b}]} {
-	    verbose -log "line #${i}" 2
-	    verbose -log "\< ${line_a}" 2
-	    verbose -log "\> ${line_b}" 2
-	    set differences -1
-	}
-    }
-
-    if { $differences == -1 || [llength ${list_a}] != [llength ${list_b}] } {
-	verbose "Files not the same" 2
-	set differences -1
-    } else {
-	verbose "Files are the same" 2
-	set differences 1
-    }
-    return ${differences}
-}
-
-#
 # Set an environment variable
 #
 proc setenv { var val } {
